--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,16 @@
 	color: white;
 	
 }
+
 #top{
-	text-align:right;
-	margin-left: 50px;
+	margin-left: 30px;
 	
+}
+
+#top1{
+	text-align:right;
+	margin-right: 20px;
+	float: right;
 }
 
 nav{
@@ -17,7 +23,7 @@ nav{
 .btn-warning{
 	background-color:orange;
 	color: white;
-	margin-left: 100px; 
+	margin-left: 50px; 
 }
 
 body{
